--- a/components/global/Comments/CommentLikeButton/CommentLikeButton.module.scss
+++ b/components/global/Comments/CommentLikeButton/CommentLikeButton.module.scss
@@ -10,40 +10,11 @@
     cursor: pointer;
 
     svg {
-        animation: heartBeat 1.2s both cubic-bezier(0.45, 0.05, 0.55, 0.95);
+        @include keyframes ('heartBeat')
     }
 }
 
 .liked {
     background-color: $orange-secondary;
     color: $orange-primary;
-}
-
-@keyframes heartBeat {
-    0% {
-      -webkit-transform: scale(0);
-      transform: scale(0)
-  }
-
-  15% {
-      -webkit-transform: scale(1.6);
-      transform: scale(1.6)
-  }
-
-  32% {
-      -webkit-transform: scale(0.8);
-      transform: scale(0.8)
-  }
-
-  50% {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      opacity: 1
-  }
-
-  to {
-      -webkit-transform: scale(1);
-      transform: scale(1);
-      opacity: 1
-  }
 }
