--- a/scss/_mixins.scss
+++ b/scss/_mixins.scss
@@ -91,6 +91,36 @@
         }
 
         animation: wiggle 0.4s ease-in-out;
+
+    } @else if ($name == 'heartBeat') {
+        @keyframes heartBeat {
+            0% {
+                -webkit-transform: scale(0);
+                transform: scale(0)
+            }
+        
+            15% {
+                -webkit-transform: scale(1.6);
+                transform: scale(1.6)
+            }
+        
+            32% {
+                -webkit-transform: scale(0.8);
+                transform: scale(0.8)
+            }
+        
+            50% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+        
+            100% {
+                -webkit-transform: scale(1);
+                transform: scale(1);
+            }
+        }
+
+        animation: heartBeat 1.2s both cubic-bezier(0.45, 0.05, 0.55, 0.95);
     }
     
 
